package jobOpeningManagement.repositories;

import eapli.framework.domain.repositories.DomainRepository;
import jobOpeningManagement.domain.Candidate;

public interface CandidateRepository extends DomainRepository<String, Candidate>{

}
