package jpa;

import applicationManagement.domain.Candidate;
import applicationManagement.domain.dto.CandidateDTO;
import applicationManagement.repositories.CandidateRepository;
import jakarta.persistence.*;

import java.util.List;
import java.util.Optional;

public class JpaCandidateRepository implements CandidateRepository {
    private EntityManager getEntityManager() {
        EntityManagerFactory factory = Persistence.
                createEntityManagerFactory("default");
        EntityManager manager = factory.createEntityManager();
        return manager;
    }

    public boolean createCandidate(CandidateDTO dto) {
        Candidate candidate = new Candidate(dto.getEmail(),
                dto.getPhone(), dto.getName());
        save(candidate);
        return true;
    }

    @Override
    public <S extends Candidate> S save(S entity) {
        EntityManager em = getEntityManager();
        EntityTransaction tx = em.getTransaction();
        try {
            tx.begin();

            // Check if there's an existing record with the same phone number
            Candidate existingCandidate = findByPhoneNumber(entity.phoneNumber());
            if (existingCandidate != null && !existingCandidate.email().equals(entity.email())) {
                throw new IllegalStateException("Phone number already exists in the database.");
            }

            // Merge the entity to update it in the database
            entity = em.merge(entity);
            tx.commit();
            return entity;
        } catch (Exception e) {
            if (tx.isActive()) {
                tx.rollback();
            }
            throw e; // Re-throw the exception to handle it in the service layer
        } finally {
            if (em != null && em.isOpen()) {
                em.close();
            }
        }
    }

    // Helper method to find a candidate by phone number
    private Candidate findByPhoneNumber(String phoneNumber) {
        EntityManager em = getEntityManager();
        try {
            String jpql = "SELECT c FROM Candidate c WHERE c.phoneNumber = :phoneNumber";
            Query query = em.createQuery(jpql, Candidate.class)
                    .setParameter("phoneNumber", phoneNumber);
            return (Candidate) query.getSingleResult();
        } catch (NoResultException e) {
            return null;
        } finally {
            if (em != null && em.isOpen()) {
                em.close();
            }
        }
    }



    public <S extends Candidate> S update(S entity) {
        EntityManager em = getEntityManager();
        em.getTransaction().begin();
        entity = em.merge(entity);
        em.getTransaction().commit();
        em.close();
        return entity;
    }

    private boolean correctCandidate(Candidate candidate) {
        boolean correct = true;
//        if (jobOpening.title() == null || jobOpening.title().isEmpty()) {
//            correct = false;
//        }
//        if (jobOpening.contractType() == null) {
//            correct = false;
//        }
//        if (jobOpening.mode() == null) {
//            correct = false;
//        }
//        if (jobOpening.address() == null) {
//            correct = false;
//        }
//        if (jobOpening.company() == null) {
//            correct = false;
//        }
//        if (jobOpening.numberOfVacancies() <= 0) {
//            correct = false;
//        }
//        if (jobOpening.description() == null || jobOpening.description().isEmpty()) {
//            correct = false;
//        }
//        //We are letting "requirements" be null because Customer Manager can choose later
//        if (jobOpening.state() == null || jobOpening.state() != RecruitmentState.APPLICATION) {
//            correct = false;
//        }
        return correct;
    }

    public List<Candidate> findAll() {
        Query query = getEntityManager().createQuery(
                "SELECT e FROM Candidate e");
        List<Candidate> list = query.getResultList();
        return list;
    }

    @Override
    public Optional<Candidate> ofIdentity(String email) {
        try {
            String jpql = "SELECT e FROM Candidate e WHERE e.email = :email";
            EntityManager em = getEntityManager();
            Query query = em.createQuery(jpql)
                    .setParameter("email", email);
            Candidate candidate = (Candidate) query.getSingleResult();
            em.close();
            return Optional.of(candidate);
        } catch (Exception e) {
            return Optional.empty();
        }
    }

    @Override
    public void delete(Candidate entity) {
        EntityManager em = getEntityManager();
        EntityTransaction tx = em.getTransaction();
        tx.begin();
        em.remove(entity);
        tx.commit();
        em.close();
    }

    @Override
    public void deleteOfIdentity(String email) {
        EntityManager em = getEntityManager();
        EntityTransaction tx = em.getTransaction();
        tx.begin();
        Query query = em.createQuery("DELETE FROM Candidate e WHERE e.email = :email");
        query.setParameter("email", email);
        query.executeUpdate();
        tx.commit();
        em.close();

    }

    @Override
    public long count() {
        Query query = getEntityManager().createQuery(
                "SELECT COUNT(e) FROM Candidate e");
        return (long) query.getSingleResult();
    }


}
